Fix gap difference when not scrollable

--- a/styles/pages/asks.module.scss
+++ b/styles/pages/asks.module.scss
@@ -21,6 +21,7 @@
 		padding-top: 0.5rem;
 		padding-left: 0.5rem;
 		justify-content: center;
+		align-content: flex-start;
 	}
 
 	.buttons {
